fix: scrollbar en tabla y pantalla

--- a/src/components/molecules/TabTable/_style.scss
+++ b/src/components/molecules/TabTable/_style.scss
@@ -5,7 +5,7 @@
   height: 68vh;
   .ant-tabs {
     @include label($body, #c4c4c4);
-    height: 100%;
+    // height: 100%;
     .ant-tabs-bar {
       padding: 0 60px;
       margin: 0;
